# samp-crypto

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  bintray.json  makefile  pawn.json
include/: samp-crypto.inc
pawn-tests/: test.pwn
src/: lib.rs  natives.rs  plugin.rs
test/: samp.json
