[package]
name = "samp-crypto"
version = "0.1.0"
authors = ["bork"]
edition = "2018"

[lib]
name = "samp_crypto"
crate-type = ["cdylib"]

[dependencies]
samp-sdk = {git = "https://github.com/ZOTTCE/samp-sdk"}
rand = "0.6.5"

scrypt = "0.2.0"
rust-argon2 = "0.4.0"
bcrypt = "0.3"

base64 = "0.10.1"
byteorder = "1.3.1"
